--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 </head>
  
 <body>
-    <header class="bg-info ">
-        <div class="container-xl text-center"><h1>Portfollio van Leandro</h1></div>
-       
-    </header>
-    <div class="container-sm">small</div>
-    <div class="container-md">medium</div>
-    <div class="container-lg">large</div>
-    <div class="container-xl">extra large</div>
-    <div class="container-xxl">extra extra large</div>
-
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">projects</a>
+              <a class="nav-link" href="#">about me</a>
+              <a class="nav-link" href="#">ervaring</a>
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </div>
+          </div>
+        </div>
+      </nav>
 </body>
 </html>
