--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+              empty
+            </div>
+            <div class="col-md-4 mid">
+                ik ben leandro
+            </div>
+            <div class="col-md-4">
+                hier komt de afbeelding
+            </div>
+            <div class="col-md-4">nog een afbeelding</div>
+            <div class="col-md-4">nog een afbeelding</div>
+            <div class="col-md-4">nog een afbeelding</div>
+
+        </div>
+    </div>
 </body>
 </html>
   
