--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container content">
         <div class="row">
             <div class="col-md-4">
               empty
             </div>
             <div class="col-md-4 mid">
-                ik ben leandro
+                Welkom op mijn portfolio website. Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof
             </div>
             <div class="col-md-4">
                 hier komt de afbeelding
@@ -42,9 +42,21 @@
             <div class="col-md-4">nog een afbeelding</div>
             <div class="col-md-4">nog een afbeelding</div>
             <div class="col-md-4">nog een afbeelding</div>
-
         </div>
     </div>
+    
+<!-- hier is de footer -->
+<footer class="mt-auto">
+    <div class="container">
+        <div class="row py-4">
+            <div class="col-12 text-center">
+                <p class="mb-0">&copy; 2024 Leandro Felies.</p>
+            </div>
+            <div class="col-12 text-center mt-2">
+                <a href="#" class="text-white">Contact</a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
-  
