meer command codes toegevoegd

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
+    <!-- hier begint de header -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">home</a>
@@ -28,6 +29,7 @@
             </div>
         </div>
     </nav>
+    <!-- hier komt de container content -->
     <div class="container content">
         <div class="row">
             <div class="col-md-4">
@@ -45,6 +47,10 @@
         </div>
     </div>
     
+
+
+
+
 <!-- hier is de footer -->
 <footer class="mt-auto">
     <div class="container">
