--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous" defer></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+        defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/style.css">
 </head>
+
 <body>
-    <!-- hier begint de header -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="d-flex">
+        <!-- Sidebar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                <div class="navbar-nav justify-content-between w-50">
-                    <a class="nav-link active" aria-current="page" href="#">projects</a>
-                    <a class="nav-link" href="#">about me</a>
-                    <a class="nav-link" href="#">ervaring</a>
-                    <a class="nav-link" href="#">contact</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ervaring</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Content -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 my-3">
+                    <h1>Welkom op mijn portfolio website</h1>
+                    <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
                 </div>
             </div>
         </div>
-    </nav>
-    <!-- hier komt de container content -->
-    <div class="container content">
-        <div class="row">
-            <div class="col-md-4">
-              empty
-            </div>
-            <div class="col-md-4 mid">
-                Welkom op mijn portfolio website. Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof
-            </div>
-            <div class="col-md-4">
-                hier komt de afbeelding
-            </div>
-            <div class="col-md-4">nog een afbeelding</div>
-            <div class="col-md-4">nog een afbeelding</div>
-            <div class="col-md-4">nog een afbeelding</div>
-        </div>
     </div>
-    
 
-
-
-
-<!-- hier is de footer -->
-<footer class="mt-auto">
-    <div class="container">
-        <div class="row py-4">
-            <div class="col-12 text-center">
-                <p class="mb-0">&copy; 2024 Leandro Felies.</p>
-            </div>
-            <div class="col-12 text-center mt-2">
-                <a href="#" class="text-white">Contact</a>
+    <!-- Footer -->
+    <footer class="mt-auto">
+        <div class="container">
+            <div class="row py-4">
+                <div class="col-12 text-center">
+                    <p class="mb-0">&copy; 2024 Leandro Felies.</p>
+                </div>
+                <div class="col-12 text-center mt-2">
+                    <a href="#" class="text-white">Contact</a>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
+
 </html>
