--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
     <div class="d-flex">
         <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
-            <a class="navbar-brand" href="#">Leandro Felies</a>
+            <a class="navbar-brand" href="./index.html">Leandro Felies</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,13 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                        <a class="nav-link active" aria-current="page" href="./projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
+                        <a class="nav-link" href="./aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Expierence</a>
+                        <a class="nav-link" href="./expierence.html">Expierence</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
