--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>Welkom op mijn portfolio website</h1>
-                    <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
+                    <h1>Contact Page</h1>
                 </div>
             </div>
         </div>
