--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
 
         <!-- Content -->
-        <div class="container-fluid">
+        <div class="container-fluid d-flex">
             <div class="row">
                 <div class="col-12 my-3">
                     <h1>Welkom op mijn portfolio website</h1>
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="mt-auto">
+    <footer class="mt-auto bg-secondary text-white">
         <div class="container">
             <div class="row py-4">
                 <div class="col-12 text-center">
@@ -64,4 +64,5 @@
         </div>
     </footer>
 </body>
+
 </html>
