--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
                 </ul>
             </div>
         </nav>
-    </div>
+
         <!-- Content -->
-        <div class="container-fluid d-flex">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>Welkom op mijn portfolio website</h1>
+                    <h1>Hey there! this is my portfollio</h1>
                     <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
                 </div>
             </div>
         </div>
-
+    </div>
 
     <!-- Footer -->
     <footer class="mt-auto bg-secondary text-white">
