--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="mt-auto">
+    <footer class="mt-auto bg-secondary text-white">
         <div class="container">
             <div class="row py-4">
                 <div class="col-12 text-center">
