--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="d-flex">
+<body class="d-flex flex-column min-vh-100">
+    <div class="d-flex flex-grow-1">
         <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
             <a class="navbar-brand" href="./index.html">Leandro Felies</a>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./expierence.html">Expierence</a>
+                        <a class="nav-link" href="./expierence.html">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
@@ -40,11 +40,11 @@
         </nav>
 
         <!-- Content -->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 my-3">
-                    <h1>Hey there! this is my portfollio</h1>
-                    <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
+        <div class="d-flex flex-column flex-grow-1" style="background: url('./img/22733334-blauw-berg-landschap-achtergrond-ochtend-visie-bergen-vlak-bergen-achtergrond-vector.jpg') no-repeat center center; background-size: cover;">
+            <div class="d-flex flex-grow-1 justify-content-center align-items-center text-center text-white">
+                <div>
+                    <h1>Hey there! this is my portfolio</h1>
+                    <p>My name is Leandro and I'll show you my journey to become the best with this portfolio</p>
                 </div>
             </div>
         </div>
