--- a/contact.html
+++ b/contact.html
@@ -43,20 +43,19 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 my-3">
-          <h1>Contact Page</h1>
-          <!-- Contact 1 - Bootstrap Brain Component -->
+          <!-- text above contact -->
           <section class="bg-light py-3 py-md-5">
             <div class="container">
               <div class="row justify-content-md-center">
                 <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-                  <h2 class="mb-4 display-5 text-center">Contact</h2>
+                  <h2 class="mb-4 display-5 text-center">Contact me</h2>
                   <p class="text-secondary mb-5 text-center">If you'd like to contact me you simply can fill in this form and you'll get responded as soon as possible!
                   </p>
                   <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
                 </div>
               </div>
             </div>
-
+             <!-- here starts de form  -->
             <div class="container">
               <div class="row justify-content-lg-center">
                 <div class="col-12 col-lg-9">
@@ -115,8 +114,6 @@
       <div class="row"></div>
     </div>
   </div>
-
-
   <!-- Footer -->
   <footer class="mt-auto bg-secondary text-white">
     <div class="container">
@@ -131,5 +128,4 @@
     </div>
 </footer>
 </body>
-
 </html>
