--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Projects</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
         defer></script>
@@ -12,8 +12,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="d-flex">
+<body class="d-flex flex-column min-vh-100">
+    <div class="d-flex flex-grow-1">
         <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
             <a class="navbar-brand" href="./index.html">Leandro Felies</a>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./expierence.html">Expierence</a>
+                        <a class="nav-link" href="./expierence.html">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
@@ -43,8 +43,44 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>Welkom op mijn portfolio website</h1>
-                    <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
+                    <h1>projects</h1>
+                    <p>here are all my projects that i've made in my high school years</p>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Project 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="./img/animated-3d-dice-roller.jpg" class="card-img-top" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Higher or Lower</h5>
+                            <p class="card-text">This project was actually my first one, Your playing against an AI you need to gamble if your going to throw higher or lower than the AI</p>
+                            <a href="https://example.com/project1" class="btn btn-primary">Play</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="./img/wat-is-een-escape-room-ontsnappen-1030x687.webp
+                        " class="card-img-top" alt="Project 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Escape Room</h5>
+                            <p class="card-text">my second project that i've made in a day. This is the first escape room that i've made</p>
+                            <a href="https://example.com/project2" class="btn btn-primary">Play</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="img/project3.jpg" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 3</h5>
+                            <p class="card-text">Dit is een korte beschrijving van Project 3. Het project toont mijn expertise in het werken met verschillende technologieën.</p>
+                            <a href="https://example.com/project3" class="btn btn-primary">Play</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
