meer projecten toegevoegd

--- a/projects.html
+++ b/projects.html
@@ -74,10 +74,10 @@
                 <!-- Project 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="img/project3.jpg" class="card-img-top" alt="Project 3">
+                        <img src="./img/idc-what-anyone-says-death-ball-is-way-better-than-blade-v0-wnlulnf7i62c1.webp" class="card-img-top" alt="Project 3">
                         <div class="card-body">
-                            <h5 class="card-title">Project 3</h5>
-                            <p class="card-text">Dit is een korte beschrijving van Project 3. Het project toont mijn expertise in het werken met verschillende technologieën.</p>
+                            <h5 class="card-title">Build A Game</h5>
+                            <p class="card-text">This is a project where i've created a lot of games in 1 game. You can play games like whack a mole and tic tac toe</p>
                             <a href="https://example.com/project3" class="btn btn-primary">Play</a>
                         </div>
                     </div>
