project pagina klaar

--- a/projects.html
+++ b/projects.html
@@ -54,8 +54,9 @@
                         <img src="./img/animated-3d-dice-roller.jpg" class="card-img-top" alt="Project 1">
                         <div class="card-body">
                             <h5 class="card-title">Higher or Lower</h5>
-                            <p class="card-text">This project was actually my first one, Your playing against an AI you need to gamble if your going to throw higher or lower than the AI</p>
-                            <a href="https://example.com/project1" class="btn btn-primary">Play</a>
+                            <p class="card-text">This project was actually my first one, Your playing against an AI you
+                                need to gamble if your going to throw higher or lower than the AI</p>
+                            <a href="https://github.com/ROCMondriaanTIN/sd23-p01-project-hoger-lager-LeandroFelies.git" class="btn btn-primary">Play</a>
                         </div>
                     </div>
                 </div>
@@ -66,38 +67,65 @@
                         " class="card-img-top" alt="Project 2">
                         <div class="card-body">
                             <h5 class="card-title">Escape Room</h5>
-                            <p class="card-text">my second project that i've made in a day. This is the first escape room that i've made</p>
-                            <a href="https://example.com/project2" class="btn btn-primary">Play</a>
+                            <p class="card-text">my second project that i've made in a day. This is the first escape
+                                room that i've made</p>
+                            <a href="https://github.com/ROCMondriaanTIN/sd23-p02-escaperoom-team070.git" class="btn btn-primary">Play</a>
                         </div>
                     </div>
                 </div>
                 <!-- Project 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="./img/idc-what-anyone-says-death-ball-is-way-better-than-blade-v0-wnlulnf7i62c1.webp" class="card-img-top" alt="Project 3">
+                        <img src="./img/idc-what-anyone-says-death-ball-is-way-better-than-blade-v0-wnlulnf7i62c1.webp"
+                            class="card-img-top" alt="Project 3">
                         <div class="card-body">
                             <h5 class="card-title">Build A Game</h5>
-                            <p class="card-text">This is a project where i've created a lot of games in 1 game. You can play games like whack a mole and tic tac toe</p>
-                            <a href="https://example.com/project3" class="btn btn-primary">Play</a>
+                            <p class="card-text">This is a project where i've created a lot of games in 1 game. You can
+                                play games like whack a mole and tic tac toe</p>
+                            <a href="https://github.com/ROCMondriaanTIN/sd23-p02-project-build-a-game-adib.git" class="btn btn-primary">Play</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 4 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="./img/boy-cartoon-character-using-laptop-computer-new-idea-bulb-icon-4k-animation-video.jpg"
+                            class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">webcatalog</h5>
+                            <p class="card-text">here i've learned how to use nodejs and work with jsons and many more
+                                new tricks. We builded a clothing site</p>
+                            <a href="https://github.com/ROCMondriaanTIN/sd23-p03-project-webcatalogus-fkn-rijke-goons.git" class="btn btn-primary">Play</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 5 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="./img/axure-data-visuallization-dashboard.jpg" class="card-img-top" alt="Project 3">
+                        <div class="card-body">
+                            <h5 class="card-title">dashboard</h5>
+                            <p class="card-text">in this project i've made an crypto dashboard with my team by using
+                                chart.js</p>
+                            <a href="https://github.com/ROCMondriaanTIN/sd23-p04-project-dashboard-lat.git" class="btn btn-primary">Play</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <!-- Footer -->
-    <footer class="mt-auto bg-secondary text-white">
-        <div class="container">
-            <div class="row py-4">
-                <div class="col-12 text-center">
-                    <p class="mb-0">&copy; 2024 Leandro Felies.</p>
+            <!-- Footer -->
+            <footer class="mt-auto bg-secondary text-white">
+                <div class="container">
+                    <div class="row py-4">
+                        <div class="col-12 text-center">
+                            <p class="mb-0">&copy; 2024 Leandro Felies.</p>
+                        </div>
+                        <div class="col-12 text-center mt-2">
+                            <a href="#" class="text-white">Contact</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 text-center mt-2">
-                    <a href="#" class="text-white">Contact</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+            </footer>
 </body>
+
 </html>
