--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,6 @@
             <a class="nav-link active" aria-current="page" href="./projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./aboutme.html">About Me</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="./expierence.html">Expierence</a>
           </li>
           <li class="nav-item">
@@ -56,7 +53,7 @@
               </div>
             </div>
              <!-- here starts de form  -->
-            <div class="container">
+            <div class="container-lg">
               <div class="row justify-content-lg-center">
                 <div class="col-12 col-lg-9">
                   <div class="bg-white border rounded shadow-sm overflow-hidden">
