--- a/expierence.html
+++ b/expierence.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About Me - Leandro Felies</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
         defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./js/skillsChart.js" defer></script>
 </head>
 
-<body>
-    <div class="d-flex">
+<body class="d-flex flex-column min-vh-100">
+    <div class="d-flex flex-grow-1">
         <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
             <a class="navbar-brand" href="./index.html">Leandro Felies</a>
@@ -24,13 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./projects.html">Projects</a>
+                        <a class="nav-link" href="./projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./aboutme.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./expierence.html">Expierence</a>
+                        <a class="nav-link" href="./expierence.html">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
@@ -43,15 +42,16 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>Welkom op mijn portfolio website</h1>
-                    <p>Mijn naam is Leandro, op mijn website ga ik laten zien hoe mijn evaluatie begint van student naar prof.</p>
+                    <h1>About Me</h1>
+                    <p>Mijn naam is Leandro Felies. Ik ben een enthousiaste ontwikkelaar met een passie voor webontwikkeling. Hieronder zie je mijn vaardigheden in verschillende technologieën.</p>
+                    <canvas id="skillsChart" width="400" height="400"></canvas>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="mt-auto">
+    <footer class="mt-auto bg-secondary text-white">
         <div class="container">
             <div class="row py-4">
                 <div class="col-12 text-center">
@@ -63,5 +63,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/chart.js"></script>
 </body>
 </html>
