expierence pagina af

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             </div>
         </nav>
 
-        <!-- Content -->
+        <!-- this is where all the Content starts on the page -->
         <div class="d-flex flex-column flex-grow-1" style="background: url('./img/22733334-blauw-berg-landschap-achtergrond-ochtend-visie-bergen-vlak-bergen-achtergrond-vector.jpg') no-repeat center center; background-size: cover;">
             <div class="d-flex flex-grow-1 justify-content-center align-items-center text-center text-white">
                 <div>
                     <h1>Hey there! this is my portfolio</h1>
-                    <p>My name is Leandro and I'll show you my journey to become the best with this portfolio</p>
+                    <p>My name is Leandro and I'll show you my journey to become the best by showing this portfolio</p>
                 </div>
             </div>
         </div>
@@ -49,13 +49,13 @@
 
     <!-- Footer -->
     <footer class="mt-auto bg-secondary text-white">
-        <div class="container">
+        <div class="container-md">
             <div class="row py-4">
                 <div class="col-12 text-center">
                     <p class="mb-0">&copy; 2024 Leandro Felies.</p>
                 </div>
                 <div class="col-12 text-center mt-2">
-                    <a href="#" class="text-white">Contact</a>
+                    <a href="./contact.html" class="text-white">Contact</a>
                 </div>
             </div>
         </div>
