--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <div class="d-flex">
     <!-- Sidebar -->
+  <div class="d-flex">
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
       <a class="navbar-brand" href="./index.html">Leandro Felies</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -36,7 +36,6 @@
       </div>
     </nav>
 
-    <!-- Content -->
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 my-3">
@@ -112,15 +111,15 @@
       <div class="row"></div>
     </div>
   </div>
-  <!-- Footer -->
+  <!-- here is the Footer -->
   <footer class="mt-auto bg-secondary text-white">
-    <div class="container">
+    <div class="container-md">
         <div class="row py-4">
             <div class="col-12 text-center">
                 <p class="mb-0">&copy; 2024 Leandro Felies.</p>
             </div>
             <div class="col-12 text-center mt-2">
-                <a href="#" class="text-white">Contact</a>
+                <a href="./contact.html" class="text-white">Contact</a>
             </div>
         </div>
     </div>
