--- a/expierence.html
+++ b/expierence.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Leandro Felies</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
-        defer></script>
+    <title>Experience - Leandro Felies</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./js/skillsChart.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+        <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -29,7 +26,7 @@
                         <a class="nav-link" href="./projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./expierence.html">Experience</a>
+                        <a class="nav-link active" aria-current="page" href="./experience.html">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
@@ -38,13 +35,51 @@
             </div>
         </nav>
 
-        <!-- Content -->
+        <!-- here starts the Content -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>About Me</h1>
-                    <p>Mijn naam is Leandro Felies. Ik ben een enthousiaste ontwikkelaar met een passie voor webontwikkeling. Hieronder zie je mijn vaardigheden in verschillende technologieën.</p>
-                    <canvas id="skillsChart" width="400" height="400"></canvas>
+                    <h1 class="title-h1">Experience</h1>
+                    <p>This is all the experience that I've built up in my years as a software developer.</p>
+
+                    <!-- here is the skills bar -->
+                    <div class="custom-skills-container">
+                        <div class="skill">
+                            <div class="skill-name">HTML</div>
+                            <div class="progress" style="height: 30px;">
+                                <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0"
+                                    aria-valuemax="100">80%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">CSS</div>
+                            <div class="progress" style="height: 30px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
+                                    aria-valuemax="100">95%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">JavaScript</div>
+                            <div class="progress" style="height: 30px;">
+                                <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
+                                    aria-valuemax="100">60%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">PHP</div>
+                            <div class="progress" style="height: 30px;">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0"
+                                    aria-valuemax="100">20%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">Java</div>
+                            <div class="progress" style="height: 30px;">
+                                <div class="progress-bar bg-info" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0"
+                                    aria-valuemax="100">30%</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,17 +87,16 @@
 
     <!-- Footer -->
     <footer class="mt-auto bg-secondary text-white">
-        <div class="container">
+        <div class="container-md">
             <div class="row py-4">
                 <div class="col-12 text-center">
                     <p class="mb-0">&copy; 2024 Leandro Felies.</p>
                 </div>
                 <div class="col-12 text-center mt-2">
-                    <a href="#" class="text-white">Contact</a>
+                    <a href="./contact.html" class="text-white">Contact</a>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="./js/chart.js"></script>
 </body>
 </html>
