--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
         defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -32,7 +33,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
-                </ul>
+                </ul>                                                           
             </div>
         </nav>
 
@@ -40,7 +41,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 my-3">
-                    <h1>projects</h1>
+                    <h1 class="title-h1">projects</h1>
                     <p>here are all my projects that i've made in my high school years</p>
                 </div>
             </div>
@@ -110,18 +111,18 @@
                 </div>
             </div>
 
-            <!-- Footer -->
-            <footer class="mt-auto bg-secondary text-white">
-                <div class="container">
-                    <div class="row py-4">
-                        <div class="col-12 text-center">
-                            <p class="mb-0">&copy; 2024 Leandro Felies.</p>
-                        </div>
-                        <div class="col-12 text-center mt-2">
-                            <a href="#" class="text-white">Contact</a>
-                        </div>
-                    </div>
+    <!-- Footer -->
+    <footer class="mt-auto bg-secondary text-white">
+        <div class="container-md">
+            <div class="row py-4">
+                <div class="col-12 text-center">
+                    <p class="mb-0">&copy; 2024 Leandro Felies.</p>
                 </div>
-            </footer>
+                <div class="col-12 text-center mt-2">
+                    <a href="./contact.html" class="text-white">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
