contact pagina is al wat mooier gemaakt

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body class="d-flex flex-column min-vh-100">
+<body>
+    <!-- Sidebar -->
     <div class="d-flex flex-grow-1">
-        <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
             <a class="navbar-brand" href="./index.html">Leandro Felies</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
