--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
       <div class="row">
         <div class="col-12 my-3">
           <!-- text above contact -->
