--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="d-flex flex-column min-vh-100">
+<body>
     <div class="d-flex flex-grow-1">
         <!-- Sidebar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light flex-column vh-100" style="width: 250px;">
